upload try again

--- a/content/posts/博客搭建指北.md
+++ b/content/posts/博客搭建指北.md
@@ -17,11 +17,11 @@ hugo version
 hugo new site 404p3rs0n
 ```
 
-![image-20230819171416735](/Users/21r000/21r000Sec/404p3rs0n/content/posts/博客搭建指北.images/image-20230819171416735.png)
+![image-20230819171416735](/Users/21r000/21r000Sec/404p3rs0n/content/posts/images/博客搭建指北/image-20230819171416735.png)
 
 创建后下载主题放到themes文件夹下，在hugo.toml中添加主题
 
-![image-20230819171457600](/Users/21r000/21r000Sec/404p3rs0n/content/posts/博客搭建指北.images/image-20230819171457600.png)
+![image-20230819171457600](/Users/21r000/21r000Sec/404p3rs0n/content/posts/images/博客搭建指北/image-20230819171457600.png)
 
 或直接指定参数在本地进行测试
 
@@ -31,8 +31,8 @@ hugo server -t LoveIt --buildDrafts
 
 配置成功后，上传github仓库，如果出现鉴权失败
 
-![image-20230819222218952](/Users/21r000/21r000Sec/404p3rs0n/content/posts/博客搭建指北.images/image-20230819222218952.png)
+![image-20230819222218952](/Users/21r000/21r000Sec/404p3rs0n/content/posts/images/博客搭建指北/image-20230819222218952.png)
 
 在github中setting中找到Developer setting创建tokens，然后在push的时候输入密码时输入token就可以了
 
-![image-20230819222400361](/Users/21r000/21r000Sec/404p3rs0n/content/posts/博客搭建指北.images/image-20230819222400361.png)
+![image-20230819222400361](/Users/21r000/21r000Sec/404p3rs0n/content/posts/images/博客搭建指北/image-20230819222400361.png)
