--- a/content/posts/博客搭建指北.md
+++ b/content/posts/博客搭建指北.md
@@ -36,3 +36,7 @@ hugo server -t LoveIt --buildDrafts
 在github中setting中找到Developer setting创建tokens，然后在push的时候输入密码时输入token就可以了
 
 ![image-20230819222400361](https://21r000-image.oss-cn-shanghai.aliyuncs.com/2023/image-20230819222400361.png)
+
+上传到github仓库后，如下图进行Deploy之后Github-pages功能即可使用
+
+![image-20230820142540778](https://21r000-image.oss-cn-shanghai.aliyuncs.com/2023/image-20230820142540778.png)
