--- a/content/posts/z7z8/博客搭建指北.md
+++ b/content/posts/z7z8/博客搭建指北.md
@@ -4,6 +4,8 @@ date: 2023-08-19T17:13:00+08:00
 draft: false
 ---
 
+## 博客搭建
+
 brew一键安装hugo
 
 ```bash
@@ -31,6 +33,8 @@ hugo server -t LoveIt --buildDrafts
 
 配置成功后，上传github仓库，如果出现鉴权失败
 
+> 注：创建的Github仓库需要以username.github.io格式命名，且仓库属性为Public。
+
 ![image-20230819222218952](https://21r000-image.oss-cn-shanghai.aliyuncs.com/2023/image-20230819222218952.png)
 
 在github中setting中找到Developer setting创建tokens，然后在push的时候输入密码时输入token就可以了
@@ -40,3 +44,18 @@ hugo server -t LoveIt --buildDrafts
 上传到github仓库后，如下图进行Deploy之后Github-pages功能即可使用
 
 ![image-20230820142540778](https://21r000-image.oss-cn-shanghai.aliyuncs.com/2023/image-20230820142540778.png)
+
+## 图床设置
+
+在Github上新建一个Public属性的仓库用来存放图片
+
+![image-20230821092716285](https://21r000-image.oss-cn-shanghai.aliyuncs.com/2023/image-20230821092716285.png)
+
+用之前生成的Token配置PicGo访问Github上传图片
+
+![image-20230821093551523](https://21r000-image.oss-cn-shanghai.aliyuncs.com/2023/image-20230821093551523.png)
+
+配置成功之后即可上传图片至Github仓库
+
+> 这里还是建议使用图床对图片进行保存，不影响图片加载速度和图片安全性。
+
