--- a/content/posts/z7z8/博客搭建指北.md
+++ b/content/posts/z7z8/博客搭建指北.md
@@ -45,6 +45,14 @@ hugo server -t LoveIt --buildDrafts
 
 ![image-20230820142540778](https://21r000-image.oss-cn-shanghai.aliyuncs.com/2023/image-20230820142540778.png)
 
+部署完成之后将仓库拉取到本地进行同步，以免丢失.github文件夹中的内容导致文章上传之后不能更新的问题
+
+```bash
+git pull origin master
+```
+
+
+
 ## 图床设置
 
 在Github上新建一个Public属性的仓库用来存放图片
@@ -58,4 +66,3 @@ hugo server -t LoveIt --buildDrafts
 配置成功之后即可上传图片至Github仓库
 
 > 这里还是建议使用图床对图片进行保存，不影响图片加载速度和图片安全性。
-
